# rumi

./: .gitignore  .gitmodules  Makefile  README.md  SPEC.md  _config.yml
.github/workflows/: pages.yml  release.yml
bindings/python/: README.md  hatch_build.py  pyproject.toml
bindings/python/rumi/: __init__.py  _dtype.py  _ffi.py  _read.py  _repr.py  _spec.py  _write.py  experimental.py  lossy.py
core/: CMakeLists.txt  README.md
core/include/rumi/: kernels.h  rumi.h  rumi.hpp  thread_pool.hpp
core/include/shortcog/: shortcog.h  shortcog.hpp
core/src/: builder.cpp  capi.cpp  geokeys.cpp  image.cpp  kernels.c  parser.cpp  pattern.cpp  plan.cpp  read.cpp  register_experimental.c  register_experimental.h  register_lossy.c  register_lossy.h
core/src/delta_n/: decode_delta_n_binding.c  decode_delta_n_binding.h  decode_delta_n_kernel.c  decode_delta_n_kernel.h  encode_delta_n_binding.c  encode_delta_n_binding.h  encode_delta_n_kernel.c  encode_delta_n_kernel.h  graph_delta_n.h  spec.md
core/src/delta_w/: decode_delta_w_binding.c  decode_delta_w_binding.h  decode_delta_w_kernel.c  decode_delta_w_kernel.h  encode_delta_w_binding.c  encode_delta_w_binding.h  encode_delta_w_kernel.c  encode_delta_w_kernel.h  graph_delta_w.h  spec.md
core/src/planar/: decode_planar_binding.c  decode_planar_binding.h  decode_planar_kernel.c  decode_planar_kernel.h  encode_planar_binding.c  encode_planar_binding.h  encode_planar_kernel.c  encode_planar_kernel.h  graph_planar.h  spec.md
core/src/quant_linear/: decode_quant_linear_binding.c  decode_quant_linear_binding.h  decode_quant_linear_kernel.c  decode_quant_linear_kernel.h  encode_quant_linear_binding.c  encode_quant_linear_binding.h  encode_quant_linear_kernel.c  encode_quant_linear_kernel.h  graph_quant_linear.h  spec.md
core/tests/: CMakeLists.txt  test_parser.cpp
slides/: app.js  index.html  styles.css
