[build-system]
requires      = ["hatchling>=1.25"]
build-backend = "hatchling.build"


[project]
name            = "rumi-eo"
dynamic         = ["version"]
description     = "A GeoTIFF profile for AI training data."
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"

authors = [
    { name = "Cesar Aybar",     email = "cesar@asterisk.coop" },
]

dependencies = [
    "numpy>=1.24",
    "cffi>=1.17",
    "openzl>=0.2",
    "certifi",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[project.urls]
Homepage   = "https://github.com/asterisk-labs/rumi"
Repository = "https://github.com/asterisk-labs/rumi"
Issues     = "https://github.com/asterisk-labs/rumi/issues"


[tool.hatch.version]
path    = "../../VERSION"
pattern = "(?P<version>\\S+)"

[tool.hatch.build.targets.wheel]
packages  = ["rumi"]
artifacts = [
    "rumi/_lib/*.so",
    "rumi/_lib/*.so.*",
    "rumi/_lib/*.dylib",
    "rumi/_lib/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "rumi/**",
    "tests/**",
    "hatch_build.py",
    "README.md",
]
exclude = [
    "rumi/_lib/*.so",
    "rumi/_lib/*.so.*",
    "rumi/_lib/*.dylib",
    "rumi/_lib/*.dll",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra --strict-markers"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]